--- a/Home.html
+++ b/Home.html
@@ -129,7 +129,7 @@
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-4" id="sec-d9e2">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1" data-animation-name="" data-animation-duration="0" data-animation-direction="">
           <h2>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Teaching</span>
