--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		"@type": "Organization",
 		"name": "",
 		"sameAs": [
-				"https://www.linkedin.com/in/qin-weng-122730129"
+				"https://www.linkedin.com/in/qin-weng-122730129",
+				"https://scholar.google.com/citations?hl=en&user=i4K-AHIAAAAJ"
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -129,7 +130,7 @@
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-4" id="sec-d9e2">
-      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1" data-animation-name="" data-animation-duration="0" data-animation-direction="">
           <h2>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Teaching</span>
@@ -217,7 +218,20 @@
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
       H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
           </a>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="Google Scholar" href="https://scholar.google.com/citations?hl=en&amp;user=i4K-AHIAAAAJ"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-2"><img src="images/icons8-google-scholar-48.png" alt=""></span>
+          </a>
         </div>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
