--- a/Home.html
+++ b/Home.html
@@ -141,7 +141,7 @@
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, cybersecurity, healthcare IT</span>
           </p>
-          <h4>
+          <h4 style="line-height: 1.4;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Courses Taught</span>
           </h4>
           <h5>
@@ -222,5 +222,16 @@
           </a>
         </div>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
