--- a/Home.html
+++ b/Home.html
@@ -129,9 +129,9 @@
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-section-4" id="sec-d9e2">
+    <section class="u-align-left u-clearfix u-section-4" id="sec-15b3">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="fr-view u-clearfix u-rich-text u-text u-text-1" data-animation-name="" data-animation-duration="0" data-animation-direction="">
+        <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
           <h2>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Teaching</span>
           </h2>
@@ -141,18 +141,18 @@
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, cybersecurity, healthcare IT</span>
           </p>
-          <h4 style="line-height: 1.4;">
+          <h4>
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Courses Taught</span>
           </h4>
-          <h5>
+          <p id="isPasted">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">ISYS 5103: Data Analytics Fundamentals (Graduate)</span>
-          </h5>
+          </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Fundamental knowledge and skills in several major areas of business data analytics. Emphasis on the management and use of data in modern organizations, intermediate &amp; advanced spreadsheet topics; relational databases &amp; SQL; and programming (such as Python).</span>
           </p>
-          <h5>
+          <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">ISYS 4193: Business Analytics and Visualization (Undergraduate)</span>
-          </h5>
+          </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Introductory study of business analytics, visualization, and systems to provide analytics-based information derived from data within and/or external to the organization. Business analytics used to support management in the decision making. Application of tools in business analytics, problem solving, visualization, and decision making.</span>
           </p>
