--- a/Home.html
+++ b/Home.html
@@ -41,10 +41,10 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px; text-shadow: 2px 2px 8px rgba(12,105,6,0.4);">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-49d6" style="padding: 10px 20px; text-shadow: 2px 2px 8px rgba(12,105,6,0.4);">Research</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-d9e2" style="padding: 10px 20px; text-shadow: 2px 2px 8px rgba(12,105,6,0.4);">Teaching</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-9ee3" style="padding: 10px 20px; text-shadow: 2px 2px 8px rgba(12,105,6,0.4);">Service</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-49d6" style="padding: 10px 20px;">Research</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-15b3" style="padding: 10px 20px;">Teaching</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-palette-2-base" href="Home.html#sec-9ee3" style="padding: 10px 20px;">Service</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -53,7 +53,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#sec-49d6">Research</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#sec-d9e2">Teaching</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#sec-15b3">Teaching</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#sec-9ee3">Service</a>
 </li></ul>
               </div>
