--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -34,17 +34,17 @@
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-21bd u-header" id="sec-8fc4"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font" style="font-size: 1.125rem; letter-spacing: 0px; font-family: AvenirLT35Light; font-weight: 700; text-transform: uppercase;">
-            <a class="u-button-style u-custom-active-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-active-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-49d6" style="padding: 10px 20px;">Research</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-15b3" style="padding: 10px 20px;">Teaching</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-9ee3" style="padding: 10px 20px;">Service</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-49d6" style="padding: 10px 20px;">Research</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-15b3" style="padding: 10px 20px;">Teaching</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-black" href="Qin-Weng.html#sec-9ee3" style="padding: 10px 20px;">Service</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -212,7 +212,7 @@
     </section>
     
     
-    <footer class="u-clearfix u-footer u-grey-80" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/qin-weng-122730129"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-991b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-991b"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
