--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -213,7 +213,6 @@
     
     
     <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/qin-weng-122730129"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-991b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-991b"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
@@ -222,7 +221,18 @@
           <a class="u-social-url" target="_blank" data-type="Custom" title="Google Scholar" href="https://scholar.google.com/citations?hl=en&amp;user=i4K-AHIAAAAJ"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-2"><img src="images/icons8-google-scholar-48.png" alt=""></span>
           </a>
         </div>
+        <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
