--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -139,7 +139,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Teaching Interest</span>
           </h4>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, cybersecurity, healthcare IT</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, healthcare IT, project management</span>
           </p>
           <h4>
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Courses Taught</span>
