--- a/index.html
+++ b/index.html
@@ -139,22 +139,40 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Teaching Interest</span>
           </h4>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, healthcare IT, project management</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Analytics, database, project management, healthcare IT</span>
           </p>
           <h4>
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Courses Taught</span>
           </h4>
           <p id="isPasted">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">ISYS 5103: Data Analytics Fundamentals (Graduate)</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">ISYS 5103: Data Analytics Fundamentals (Graduate)</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Fundamental knowledge and skills in several major areas of business data analytics. Emphasis on the management and use of data in modern organizations, intermediate &amp; advanced spreadsheet topics; relational databases &amp; SQL; and programming (such as Python).</span>
           </p>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">ISYS 4193: Business Analytics and Visualization (Undergraduate)</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">ISYS 4193: Business Analytics and Visualization (Undergraduate)</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Introductory study of business analytics, visualization, and systems to provide analytics-based information derived from data within and/or external to the organization. Business analytics used to support management in the decision making. Application of tools in business analytics, problem solving, visualization, and decision making.</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">CMP 283: Database Management Systems (Undergraduate)</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Database Concepts, ER diagrams, normalization, SQL, MS Access.</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">BUSBIS 1060: Introduction to Management Information Systems (Undergraduate)</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Fundamental MIS topics, including database, decision support, business intelligence, e-commerce, and crowdsourcing. Excel, Access, RapidMiner (data analytics), and Google sites.</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">INFO 258: Objected-Oriented Programming (Undergraduate)</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">objected-oriented programming with Visual Basic, and relevant techniques including VB form design, VB programming, ADO, and ActiveX.</span>
           </p>
         </div>
       </div>
@@ -223,6 +241,16 @@
         </div>
         <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
