--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -106,7 +106,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Viswanath Venkatesh, Qin Weng, Arun Rai, Likoebe M. Maruping (2023). “Guidelines for the Development of Three-Level Models: Bridging Levels of Analysis and Integrating Contextual Influences in IS Research,” Journal of the Association for Information Systems 24(1): 65-106.</span>
           </p>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Wendy Wang, Amber Young (2022). “How Is IT Identity Claimed and Manifested?” Proceedings from 28th Americas Conference on Information Systems, Minneapolis, MN, USA August. (Selected as a top paper for AMCIS 2022)</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Wendy Wang, Amber Young (2022). “How Is IT Identity Claimed and Manifested?” Proceedings from 28th Americas Conference on Information Systems, Minneapolis, MN, August. (Selected as a top paper for AMCIS 2022)</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Wendy Wang, Jignya Patel (2019). “Exploring the Formation of IT Identity: A Technology-Value Fit Model,” Proceedings from 25th Americas Conference on Information Systems, Cancun, Mexico, August.</span>
