--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-3dd4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/IMG_4614-googlescholar_preview_rev_1-modified.png" alt="" data-image-width="375" data-image-height="375">
-        <div class="fr-view u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-clearfix u-rich-text u-text u-text-1">
+        <img class="u-align-left u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/IMG_4614-googlescholar_preview_rev_1-modified.png" alt="" data-image-width="375" data-image-height="375">
+        <div class="fr-view u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-left-xl u-clearfix u-rich-text u-text u-text-1">
           <h3 style="line-height: 1; text-align: center;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng</span>
           </h3>
-          <p style="line-height: 1; text-align: center;">
+          <p style="line-height: 1.1; text-align: center;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Assistant Professor<br id="isPasted">Information Systems<br>University of Arkansas<br>
             </span>
           </p>
