--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -21,7 +21,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "Arkansas",
 		"sameAs": [
 				"https://www.linkedin.com/in/qin-weng-122730129",
 				"https://scholar.google.com/citations?hl=en&user=i4K-AHIAAAAJ"
@@ -41,10 +41,10 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-custom-color-3 u-nav-link u-text-active-custom-color-2 u-text-custom-color-2 u-text-hover-custom-color-2" href="Qin-Weng.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-custom-color-3 u-nav-link u-text-active-custom-color-2 u-text-custom-color-2 u-text-hover-custom-color-2" href="Qin-Weng.html#sec-49d6" style="padding: 10px 20px;">Research</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-custom-color-3 u-nav-link u-text-active-custom-color-2 u-text-custom-color-2 u-text-hover-custom-color-2" href="Qin-Weng.html#sec-15b3" style="padding: 10px 20px;">Teaching</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-custom-color-3 u-nav-link u-text-active-custom-color-2 u-text-custom-color-2 u-text-hover-custom-color-2" href="Qin-Weng.html#sec-9ee3" style="padding: 10px 20px;">Service</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-palette-2-light-2 u-nav-link u-text-active-palette-2-dark-1 u-text-hover-palette-2-dark-1 u-text-palette-2-dark-1" href="Qin-Weng.html" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-2-light-2 u-nav-link u-text-active-palette-2-dark-1 u-text-hover-palette-2-dark-1 u-text-palette-2-dark-1" href="Qin-Weng.html#sec-49d6" style="padding: 10px 20px;">Research</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-2-light-2 u-nav-link u-text-active-palette-2-dark-1 u-text-hover-palette-2-dark-1 u-text-palette-2-dark-1" href="Qin-Weng.html#sec-15b3" style="padding: 10px 20px;">Teaching</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-2-light-2 u-nav-link u-text-active-palette-2-dark-1 u-text-hover-palette-2-dark-1 u-text-palette-2-dark-1" href="Qin-Weng.html#sec-9ee3" style="padding: 10px 20px;">Service</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -64,21 +64,32 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-3dd4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-align-left u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/IMG_4614-googlescholar_preview_rev_1-modified.png" alt="" data-image-width="375" data-image-height="375">
+        <img class="u-align-left u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/circle-googlescholar.png" alt="" data-image-width="716" data-image-height="716">
         <div class="fr-view u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-left-xl u-clearfix u-rich-text u-text u-text-1">
-          <h3 style="line-height: 1; text-align: center;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng</span>
+          <h3 style="text-align: center;">
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
+              <span class="u-text-body-color">Qin Weng</span>
+            </span>
           </h3>
-          <p style="line-height: 1.1; text-align: center;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Assistant Professor<br id="isPasted">Information Systems<br>University of Arkansas<br>
+          <p style="text-align: center;">
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
+              <span class="u-text-body-color">Assistant Professor<br id="isPasted">Information Systems<br>&nbsp;University of Arkansas
+              </span>
+            </span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
+              <br>
             </span>
           </p>
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-2" id="sec-ffc4">
+    <section class="u-align-left u-clearfix u-section-2" id="sec-a2c9">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-left u-custom-font u-text u-text-1"> Dr. Qin Weng&nbsp;is an Assistant Professor of Information Systems in the Sam M. Walton College of Business at the University of Arkansas. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in&nbsp;Information Systems Research, Journal of the Association of Information Systems,&nbsp;Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience&nbsp;in the healthcare industry in the US.</p>
+        <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Dr. Qin Weng is an Assistant Professor of Information Systems in the Sam M. Walton College of Business at the University of Arkansas. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in Information Systems Research, Journal of the Association of Information Systems, Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience in the healthcare industry in the US.</span>
+          </p>
+        </div>
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-3" id="sec-49d6">
@@ -233,8 +244,7 @@
     </section>
     
     
-    <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
+    <footer class="u-clearfix u-container-align-center u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-left-xl u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/qin-weng-122730129"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-991b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-991b"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
