--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
           <h4 style="line-height: 1.8;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Publications</span>
           </h4>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Tom Mattson, Qin Weng, Jie Ren (2024). “Curse or Cure: Exploring Responses to Mental Health Related Posts in Reddit and ChatGPT Using Terror Management Theory,” Proceedings from 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January.</span>
+          </p>
           <p style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment Using fsQCA,” Proceedings from 29th Americas Conference on Information Systems, Panama City, Panama, August.</span>
           </p>
@@ -140,10 +143,10 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Laurie J. Kirsch, Qin Weng (2015). “IT Standards,” Wiley Encyclopedia of Management, 3rd Edition, Volume 7, Management Information Systems.</span>
           </p>
           <p style="line-height: 1.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Nikhil Sharma, Brian S. Butler (2011). “Just-in-time Knowledge: Knowledge Mobilization in a Public Health Network,” Proceedings from 17th Americas Conference on Information Systems, Detroit, August.</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Nikhil Sharma, Brian S. Butler (2011). “Just-in-time Knowledge: Knowledge Mobilization in a Public Health Network,” Proceedings from 17th Americas Conference on Information Systems, Detroit, MI, August.</span>
           </p>
           <p style="line-height: 1.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Kendall Giles, K-M. Bryson, Qin Weng (2001). “Comparison of Two Families of Entropy-Based Classification Measures with and without Feature Selection,” Proceedings from 34th Hawaii International Conference on Systems Sciences, IEEE.</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Kendall Giles, K-M. Bryson, Qin Weng (2001). “Comparison of Two Families of Entropy-Based Classification Measures with and without Feature Selection,” Proceedings from 34th Hawaii International Conference on Systems Sciences, Maui, HI, January.</span>
           </p>
         </div>
       </div>
