--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -173,7 +173,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">QBA 3305: Introduction to Business Analytics (Undergraduate)</span>
           </p>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Designed to aid in understanding what has happened in the past in a firm (descriptive analytics), using past data to predict what is going to happen in the future (predictive analytics), and helping to determine the best course of action to take (prescriptive analytics). Explores how to combine statistical modeling and computer techniques to help make principled decisions in the context of business.</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Designed to aid in understanding what has happened in the past in a firm (descriptive analytics), using past data to predict what is going to happen in the future (predictive analytics), and helping to determine the best course of action to take (prescriptive analytics). Explores how to combine statistical modeling and computer techniques (e.g., R, RStudio) to help make principled decisions in the context of business.</span>
           </p>
           <p id="isPasted" style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">ISYS 5103: Data Analytics Fundamentals (Graduate)</span>
@@ -229,39 +229,15 @@
           <h4 style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Reviewer</span>
           </h4>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">MIS Quarterly</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Journal of Strategic Information Systems<br>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
+              <span style="font-weight: 700;">For Journals</span>: MIS Quarterly, Information Systems Research, Journal of Strategic Information Systems, European Journal of Information Systems, Information &amp; Management, Journal of Computer Information Systems, Journal of Service Science and Management
             </span>
           </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Information Systems Research</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Journal of Computer Information Systems</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">European Journal of Information Systems</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Information &amp; Management</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Journal of Service Science and Management</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">International Conference on Information Systems</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Americas Conference on Information Systems</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">European Conference on Information Systems</span>
-          </p>
-          <p style="line-height: 0.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Hawaii International Conference on System Sciences</span>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
+              <span style="font-weight: 700;">For Conferences</span>: Americas Conference on Information Systems, Hawaii International Conference on System Sciences, International Conference on Information Systems, European Conference on Information Systems
+            </span>
           </p>
         </div>
       </div>
