--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Publications</span>
           </h4>
           <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Danping Wang, Stephen De Lurgio II, Sebastian Schuetz (forthcoming). "How Do Small-to-Medium-Sized E-Commerce Businesses Stay Competitive? Evidence on the Critical Roles of IT Capability, Innovation, and Multihoming," <span style="font-weight: 700;">Internet Research</span>.
+            </span>
+          </p>
+          <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Tom Mattson, Jie Ren, Qin Weng (2024). “The Bright and Dark Side of Social Media in the Marginalized Contexts,” Proceedings of 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January: 7204.</span>
           </p>
           <p>
@@ -221,7 +225,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Associate Editor, Digital Technologies and the Future of Work Track, ICIS, 2024</span>
           </p>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, The Bright and Dark Side of Social Media in Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS-57, 2024–2025</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS-57, 2024–2025</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, Digital Frontiers of Social Computing for Social Good, in Social Computing Track, AMCIS, 2024</span>
@@ -237,7 +241,7 @@
           </h4>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">
-              <span style="font-weight: 700;">For Journals</span>: MIS Quarterly, Information Systems Research, Journal of Strategic Information Systems, European Journal of Information Systems, Information &amp; Management, Journal of Computer Information Systems, Journal of Service Science and Management
+              <span style="font-weight: 700;">For Journals</span>: MIS Quarterly, Information Systems Research, Journal of Strategic Information Systems, European Journal of Information Systems, Information &amp; Management, Internet Research, Journal of Computer Information Systems, Journal of Service Science and Management
             </span>
           </p>
           <p>
