--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- First Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle">QBA 3305: Introduction to Business Analytics (Undergraduate)&nbsp;</h2>
-      <h3 class="sectionContentSubTitle">Baylor / Spring 2024</h3>
+      <h3 class="sectionContentSubTitle">Baylor University / Spring 2024</h3>
       <p class="sectionContent"> Designed to aid in understanding what has happened in the past in a firm (descriptive analytics), using past data to predict what is going to happen in the future (predictive analytics), and helping to determine the best course of action to take (prescriptive analytics). Explores how to combine statistical modeling and computer techniques (e.g., R, RStudio) to help make principled decisions in the context of business.</p>
     </article>
     <!-- Second Title & company details  -->
