--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 <p><span>Area: Project management, Health IT</span></p>
       <p><span>Keywords:&nbsp;control, team, collaboration, personality, network, identity, security, value </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
+	  <p>Qin Weng, Wendy Wang (Accepted). "Exploring IT Identity Claims: Toward A Value-Centric IT Identification Framework," <strong>European Journal of Information Systems</strong>. &nbsp;</p>
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Accepted). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>.&nbsp;&nbsp;</p>
-	  <p>Tom Mattson, Jie Ren, Qin Weng (2025). “The Bright and Dark Side of Social Media in the Marginalized Contexts,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6534. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/b7e0fac3-96d3-40a1-9e02-76d1a71d493f">read</a></p>
+<p>Tom Mattson, Jie Ren, Qin Weng (2025). “The Bright and Dark Side of Social Media in  Marginalized Contexts,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6534. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/b7e0fac3-96d3-40a1-9e02-76d1a71d493f">read</a></p>
 <p>Tom Mattson, <u>Qin Weng</u>, Jie Ren (2025). “Unveiling Gender Dynamics for Mental Health Posts in Social Media and Generative Artificial Intelligence,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January: 6562-6571. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/80b5e612-350a-49cc-8eab-2bbd845d10a0">read</a></p>
 <p>Min Ou, <u>Qin Weng</u>, Hope Koch (2024). “How Intelligent Technologies Influence the Role of Knowledge Workers in the Tech Industry,” Proceeding of the 45th International Conference on Information Systems, Bangkok, Thailand, December: 2416.&nbsp;&nbsp;<a target="_blank" href="https://aisel.aisnet.org/icis2024/digtech_fow/digtech_fow/3/">read</a></p>
 <p><u>Qin Weng</u>, Jaime B. Windeler, Likoebe M. Maruping, Viswanath Venkatesh (2024). "Bridge the Gap or Mind the Gap? The Role of Leader Coaching and Communication Technologies in Configurationally Dispersed Teams," <strong>Information &amp; Management </strong>61(6): 104000. <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S037872062400082X">read</a></p>
@@ -137,7 +138,7 @@
 </section>
 <footer>
   <hr>
-  <p class="footerDisclaimer">"My grace is sufficient for you, for My strength is made perfect in weakness." <span> (2 Corinthians 12:9)&nbsp;</span></p>
+  <p class="footerDisclaimer">"The Lord is my shepherd; I shall not want." <span> (Psalm 23:1)&nbsp;</span></p>
 </footer>
 </body>
 </html>
