--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!-- ICIS 2025 -->	
       <p>Min Ou, Hope Koch, <u>Qin Weng</u> (Accepted). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
 	<!-- ISJ 2025-->
-	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the messenger: The influence of sender characteristics on security message compliance intention," <strong>Information Systems Journal</strong>. </p>
+	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the messenger: The influence of sender characteristics on security message compliance intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5379233">read</a></p>
 	<!-- MISQ 2025-->
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Forthcoming). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>. <a target="_blank" href="https://misq.umn.edu/extending-the-it-risk-control-framework-incorporating-the-role-of-team-personality.html">read</a></p>
 	<!-- AMCIS 2025 -->
