--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <hr class="sectionTitleRule2">
     <!-- First Title & company details  -->
     <article class="section2Content">
-	  <h2 class="sectionContentTitle">MIS 6325: Advanced Quantitative Analysis (Doctoral Seminar)&nbsp;</h2>
+	  <h2 class="sectionContentTitle">MIS 6325: Advanced Quantitative Methods (Doctoral Seminar)&nbsp;</h2>
       <h3 class="sectionContentSubTitle">Baylor University / Fall 2025</h3>
       <p class="sectionContent"> Designed to develop quantitative skills for conducting rigorous data driven research. Topics include Econometrics, Propensity Score Matching, Instrumental Variable, Simultaneous Equations Models, Measurement Error, 2SLS, 3SLS, Difference-in-Difference, Multi-Level and Longitudinal Modeling, Moderator and Mediator.</p>
       <h2 class="sectionContentTitle">QBA 3305: Introduction to Business Analytics (Undergraduate)&nbsp;</h2>
